feat: implement viewport feature
